welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: value ++ is not a member of Int
		nbTeen++;
                      ^countTeen:7: error: value ++ is not a member of Int
		nbTeen++;
                      ^countTeen:10: error: value ++ is not a member of Int
		nbTeen++;
                      ^countTeen:13: error: value ++ is not a member of Int
		nbTeen++;
                      ^