welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nbTeen:Int = 0;
	if(a >= 13 && a <= 19) {
		nbTeen++;
	}
	if(b >= 13 && b <= 19) {
		nbTeen++;
	}
	if(c >= 13 && c <= 19) {
		nbTeen++;
	}
	if(d >= 13 && d <= 19) {
		nbTeen++;
	}
	return nbTeen;
}